--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.14",
     "framer-motion": "^10.16.3",
     "next-themes": "^0.4.6",
